Fix Mixed Content

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDenChhf07VG7-VrijqSDS15H_Y4ngfvH0"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDenChhf07VG7-VrijqSDS15H_Y4ngfvH0"></script>
 </body>
 </html>
